add section filter for product

--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -26,7 +26,7 @@
 
 // <CHECK>
 // Снипет (HTML): chk
-// @import "checkbox";
+@import "checkbox";
 
 // <RADIO>
 // Снипет (HTML): opt
@@ -46,7 +46,7 @@
 
 // <RANGE>
 // Снипет (HTML):
-// @import "range";
+@import "range";
 
 // <CALENDAR>
 // Снипет (HTML):
