--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -50,7 +50,7 @@
     flex-direction: row;
     width: rem(18);
     height: 0px;
-    border: 2px solid #FFFFFF;
+    border: 2px solid rgba(153, 152, 152, 0.867);
     border-radius: rem(2);
     cursor: pointer;
     &::before{
