--- a/src/scss/base/forms/checkbox.scss
+++ b/src/scss/base/forms/checkbox.scss
@@ -10,10 +10,12 @@
 		height: 0;
 		opacity: 0;
 		&:focus + .checkbox__label:before {
-			box-shadow: 0 0 5px #000;
+			//box-shadow: 0 0 5px $mainOrangeColor;
+			
 		}
-		&:checked + .checkbox__label:before {
-			background: #000;
+		&:checked + .checkbox__label:after {
+			transform: scale(1);
+			
 		}
 	}
 	// .checkbox__label
@@ -26,13 +28,29 @@
 		&:before {
 			content: "";
 			align-self: flex-start;
-			flex: 0 0 20px;
-			width: 20px;
-			height: 20px;
-			border: 1px solid #a7a9ac;
+			flex: 0 0 18px;
+			width: 18px;
+			height: 18px;
+			border: 1px solid $mainOrangeColor;
+			border-radius: 2px;
+		}
+		&::after {
+			content: "";
+			transform: scale(0);
+			position: absolute;
+			transition: all 0.3s ease 0s;
+			width: 12px;
+			height: 12px;
+			top: 3px;
+			left: 3px;
+			background-color: $mainOrangeColor;
 		}
 	}
 	// .checkbox__text
 	&__text {
+		font-size: 16px;
+		line-height: 20px;
+		color: #141414;
+		margin-left: rem(10);
 	}
 }
