--- a/src/scss/base/forms/select.scss
+++ b/src/scss/base/forms/select.scss
@@ -146,3 +146,60 @@
 ._select-tag {
 	cursor: pointer;
 }
+
+// options-product SELECT
+.options-product {
+	.select {
+		// .select__title
+		&__title {
+			color: inherit;
+			text-align: left;
+			border: 1px solid #d9d9d9;
+			background-color: #fff;
+			cursor: pointer;
+			width: 100%;
+			border-radius: 4px;
+		}
+		// .select__value
+		&__value {
+			height: rem(40);
+			&:after {
+				content:'\e900';
+				@extend %ic;
+				font-size: rem(12);
+				color: $mainOrangeColor;
+				align-self: stretch;
+				background-color: #0000;
+				transition: all 0.3s ease 0s;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		}
+		// .select__options
+		&__options {
+			color: #000;
+			position: absolute;
+			top: 40px;
+			border-radius: 4px;
+			min-width: 100%;
+			left: 0;
+			background: #FEFEFE;
+			//border: 1px solid #d9d9d9;
+			padding: 10px 0px 5px 0px;
+			box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+		}
+		// .select__option
+		&__option {
+			&._select-selected {
+				background-color: #eee;
+			}
+			@media (any-hover: hover) {
+				&:hover {
+					background: #000000;
+					color:#eee;
+				}
+			}
+		}
+	}
+}
