--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -6,6 +6,7 @@
     &__head-wrapper {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         @media (max-width:$mobile){
              flex-direction: column; 
              justify-content: center;
@@ -185,9 +186,16 @@
             line-height: 20px;
             color: #E8AA31;
             margin-left: rem(10);
-
-        }
-    }
+        }    
+    }   
+    &__text--footer {
+        font-weight: 500;
+        font-size: rem(14);
+        line-height: math.div( 22, 16);
+        color: rgba(255, 255, 255, 0.8);
+    }   
 }
+
+
 //========================================================================================================================================================
 
