--- a/src/scss/libs/tippy.scss
+++ b/src/scss/libs/tippy.scss
@@ -6,8 +6,11 @@
 }
 .tippy-box {
 	position: relative;
-	background-color: #333;
-	color: #fff;
+	background: #FEFEFE;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+	padding: rem(15);
+	color: #141414;
+	border: 1px solid #E8AA31;
 	border-radius: 4px;
 	font-size: 14px;
 	line-height: 1.4;
@@ -58,7 +61,7 @@
 .tippy-arrow {
 	width: 16px;
 	height: 16px;
-	color: #333;
+	color: #E8AA31;;
 }
 .tippy-arrow:before {
 	content: "";
